# Azure-AI-Agent

./: .env.example  .gitignore  Dockerfile  assignment.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  pr.yml  scheduled-eval.yml
data/eval/: test_dataset.json
data/sample_docs/: employee_handbook.txt  it_security_policy.md  product_faq.txt  quarterly_report_q4_2024.md
infra/: deploy.sh
src/agent/: cache.py  graph.py  guardrails.py  nodes.py  sanitizer.py  setup.py  state.py
src/agent/guardrails_config/: config.yml  input.co
src/api/: app.py  middleware.py  schema.py
src/api/routes/: chat.py  evaluate.py  health.py  upload.py
src/config/: __init__.py  logging.py  settings.py
src/db/: connection.py  models.py  seed.py
src/eval/: runner.py
src/mcp/: server.py
src/rag/: azure_search.py  embeddings.py  ingest.py  reranker.py  retriever.py  sparse.py  store.py
src/tools/: file_status.py  rag_tool.py
src/ui/: app.py
